--- a/app/views/admin/newuser.html.erb
+++ b/app/views/admin/newuser.html.erb
@@ -1,11 +1,11 @@
-<h2>Sign up</h2>
+<h2>Create Account</h2>
+<%#create account from admin%>
+<%= form_for(@user, url: admin_newuser_path, method: :post) do |f| %>
+  <%#= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-
-   <div class="field">
+  <div class="field">
     <%= f.label :full_name %><br />
-    <%= f.text_field :full_name, autofocus: true, autocomplete: "full-name" %>
+    <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name" %>
   </div>
 
   <div class="field">
@@ -27,8 +27,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Create Account" %>
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+<%#= render "devise/shared/links" %>
