--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,12 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "admins/shared/error_messages", resource: resource %>
+  <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :full_name %><br />
+    <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -26,4 +31,4 @@
   </div>
 <% end %>
 
-<%= render "admins/shared/links" %>
+<%= render "devise/shared/links" %>
