--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,20 +18,24 @@
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
     
-        <p class="navbar-text float-right">
-      <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to "Edit profile", edit_user_registration_path, :class => "navbar-link" %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "navbar-link" %>
-      <% end %>
+  <%if user_signed_in? %>
+    <p>Signed in as <%= current_user.email %></p>
+    <%= link_to 'sign out', destroy_user_session_path, method: :delete %>
+    <%#remove if admin signed in%>
+  <% elsif user_signed_in? == false && admin_signed_in? == false%>
+    <%= link_to 'sign in', new_user_session_path %>
+  <% end %>
+     
+  <%if admin_signed_in? %>
+    <p>Signed in as <%= current_admin.email %></p>
+    <%= link_to 'sign out', destroy_user_session_path, method: :delete %>
+  <% elsif user_signed_in? == false && admin_signed_in? == false%>
+    <%= link_to 'admin sign in', new_admin_session_path %>
+  <% end %>
 
-      </p>
-          <p class="navbar-text float-right">
-      <% if admin_signed_in? %>
-        Logged in as <strong><%= current_admin.email %></strong>.     
-         <%= link_to "Logout", destroy_admin_session_path, method: :delete, :class => "navbar-link" %> 
-      <% end %>
-       </p>
+  
+
+       
     <%= yield %>
   </body>
 </html>
