--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    @media (min-width: 768px) {
+        flex-direction: unset;
+    }
+}
+
+.img_preview {
+}
