--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="container">
+    <h1 class="font-black text-6xl text-center m-5">Welcome#index</h1>
+
+    <%= image_tag("general/Revenue.gif", class:"img_preview") %>
+</div>
+
 
 
 
