--- a/app/views/admin/newuser.html.erb
+++ b/app/views/admin/newuser.html.erb
@@ -1,34 +1,39 @@
 <h2>Create Account</h2>
 <%#create account from admin%>
-<%= form_for(@user, url: admin_newuser_path, method: :post) do |f| %>
-  <%#= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :full_name %><br />
-    <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name" %>
-  </div>
+<div class="row">
+  <div class="col-9">
+    <%= form_for(@user, url: admin_newuser_path, method: :post) do |f| %>
+      <%#= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :full_name %>
+        <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name", class: "form-control" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'  %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="form-group">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+          <em class="form-text text-muted">(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %>
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Create Account" %>
+      <div class="form-group">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Create Account", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
 
 <%#= render "devise/shared/links" %>
