--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <span class="navbar-brand">R-Stock</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,34 +22,44 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <%= link_to 'Home', root_path, class: "nav-link"%>
+              <%= link_to 'Home', root_path, class: "nav-link nav-menu" %>
             </li>
-            <%if user_signed_in? %>
+
+            <%if user_signed_in? == false && admin_signed_in? == false%>
+              <button type="button" class="btn btn-primary ml-auto mr-1">
                 <li class="nav-item">
-                  <a class="nav-link">Signed in as <%= current_user.email %></a>
+                  <%= link_to 'Client', new_user_session_path, class: "nav-link" %>
                 </li>
-                <li class="nav-item">
-                    <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "nav-link" %>
-                </li>
-                  <%#remove if admin signed in%>
-                <% elsif user_signed_in? == false && admin_signed_in? == false%>
-                <li class="nav-item">
-                  <%= link_to 'Sign in', new_user_session_path, class: "nav-link" %>
-                </li>
+              </button>
             <% end %>
 
-            <%if admin_signed_in? %>
-              <li class="nav-item">
-                  <a class="nav-link">Signed in as <%= current_admin.email %></a>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Sign out', destroy_admin_session_path, method: :delete, class: "nav-link" %>
-              </li>
-              <% elsif user_signed_in? == false && admin_signed_in? == false%>
-              <li class="nav-item">
-                <%= link_to 'Admin Sign in', new_admin_session_path, class: "nav-link"%>
-              </li>
+
+            <%if user_signed_in? == false && admin_signed_in? == false%>
+              <button type="button" class="btn btn-primary">
+                <li class="nav-item">
+                  <%= link_to 'Admin', new_admin_session_path, class: "nav-link"%>
+                </li>
+              </button>
             <% end %>
+            
+          <%if admin_signed_in? || user_signed_in? %>
+            <div class="dropdown">
+              <div class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+                
+              </div>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                <%if admin_signed_in? %>
+                  <a class="dropdown-item" href="#"><%= current_admin.email %></a>
+                  <%= link_to 'Sign out', destroy_admin_session_path, method: :delete, class: "dropdown-item" %>
+                <% else %>
+                  <a class="dropdown-item"><%= current_user.email %></a>
+                  <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                <% end %>
+              </div>
+            </div>
+          <% end %>
+
+
           </ul>
         </div>
       </div>
