--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,10 @@
   <head>
     <title>RailsStockApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -25,14 +29,14 @@
               <%= link_to 'Home', root_path, class: "nav-link nav-menu" %>
             </li>
 
+            <div class="admin-user-btn-container">
             <%if user_signed_in? == false && admin_signed_in? == false%>
-              <button type="button" class="btn btn-primary ml-auto mr-1">
+              <button type="button" class="btn btn-primary btn-client">
                 <li class="nav-item">
                   <%= link_to 'Client', new_user_session_path, class: "nav-link" %>
                 </li>
               </button>
             <% end %>
-
 
             <%if user_signed_in? == false && admin_signed_in? == false%>
               <button type="button" class="btn btn-primary">
@@ -58,6 +62,7 @@
               </div>
             </div>
           <% end %>
+          </div>
 
 
           </ul>
@@ -66,7 +71,7 @@
     </nav>
 
 
-  <div class="container">
+    <div class="container content-container">
       <%= render 'layouts/messages' %>
 
       <%= yield %>
