--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,193 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  @media (min-width: 768px) {
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+  }
+}
+
+.title-header-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  @media (min-width: 768px) {
+    text-align: unset;
+  }
+}
+
+.welcome-text {
+  font-family: 'Open Sans', sans-serif;
+  color: #fff;
+  font-weight: bold;
+}
+
+.welcome-text.welcome-subtext {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: normal;
+  color: #b7bdc6;
+}
+
+div#dropdownMenuButton {
+    border-radius: 100%;
+}
+
+.dropdown-toggle::after {
+    visibility: hidden;
+}
+
+.dropdown {
+    margin-left: auto;
+}
+
+ul.navbar-nav.mr-auto {
+    width: 100%;
+}
+
+button.btn.btn-primary {
+    padding: 0;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #000;
+}
+
+.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+    color: inherit;
+}
+
+.navbar-brand {
+  color: #fff !important;
+}
+
+a.nav-link {
+  color: #fff !important;
+}
+
+a.nav-link.nav-menu:hover {
+  color: rgb(30, 255, 150) !important;
+}
+
+.card {
+  border: unset;
+  background: none;
+}
+
+.card-body {
+  background: rgba(255, 255, 255, 0.2);
+  border: unset;
+  border-radius: 10px;
+  padding: 0.5rem;
+  min-width: 10rem;
+}
+
+.card-body > p {
+    margin-bottom: 0;
+}
+
+.card-title {
+  color: #fff;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.card-text {
+  display: flex;
+  color: rgb(183, 189, 198);
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.card-main-amount {
+  color: rgb(30, 255, 150);
+  text-shadow: 2px 2px 4px #000000;
+  font-weight: bold;
+  margin-bottom: 0rem !important;
+}
+
+.btn-primary {
+  background-color:rgb(30, 255, 150) !important;
+  border-color: unset !important;
+  color: #000000
+}
+
+.image-preview {
+  width: 65%;
+  @media (min-width: 768px) {
+    width: 40%;
+  }
+}
+
+.market-list {
+  display: flex;
+  overflow-x: scroll;
+}
+.market-list::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge add Firefox */
+.market-list {
+  -ms-overflow-style: none;
+  scrollbar-width: none; /* Firefox */
+}
+
+
+
+// card Design  
+  .item{
+    padding-left:5px;
+    padding-right:5px;
+  }
+  .item-card{
+    transition:0.5s;
+    cursor:pointer;
+  }
+  .item-card-title{  
+    font-size:15px;
+    transition:1s;
+    cursor:pointer;
+    margin-top: 0 !important;
+  }
+  .item-card-title i{  
+    font-size:15px;
+    transition:1s;
+    cursor:pointer;
+    color:#ffa710
+  }
+  .card-title i:hover{
+    transform: scale(1.25) rotate(100deg); 
+    color:#18d4ca;
+  }
+  .card{
+    transform: scale(1.05);
+    box-shadow: 10px 10px 15px rgba(0,0,0,0.3);
+  }
+  
+  .card::before, .card::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: scale3d(0, 0, 1);
+    transition: transform .3s ease-out 0s;
+    background: rgba(255, 255, 255, 0.1);
+    content: '';
+    pointer-events: none;
+  }
+  .card::before {
+    transform-origin: left top;
+  }
+  .card::after {
+    transform-origin: right bottom;
+  }
+  .card:hover::before, .card:hover::after, .card:focus::before, .card:focus::after {
+    transform: scale3d(1, 1, 1);
+  }
