--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,10 @@
   <head>
     <title>RailsStockApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,31 +15,66 @@
   </head>
 
   <body>
-   <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-    
-  <%if user_signed_in? %>
-    <p>Signed in as <%= current_user.email %></p>
-    <%= link_to 'sign out', destroy_user_session_path, method: :delete %>
-    <%#remove if admin signed in%>
-  <% elsif user_signed_in? == false && admin_signed_in? == false%>
-    <%= link_to 'sign in', new_user_session_path %>
-  <% end %>
-     
-  <%if admin_signed_in? %>
-    <p>Signed in as <%= current_admin.email %></p>
-    <%= link_to 'sign out', destroy_admin_session_path, method: :delete %>
-  <% elsif user_signed_in? == false && admin_signed_in? == false%>
-    <%= link_to 'admin sign in', new_admin_session_path %>
-  <% end %>
 
-  
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <span class="navbar-brand">R-Stock</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-       
-    <%= yield %>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <%= link_to 'Home', root_path, class: "nav-link nav-menu" %>
+            </li>
+
+            <div class="admin-user-btn-container">
+            <%if user_signed_in? == false && admin_signed_in? == false%>
+              <button type="button" class="btn btn-primary btn-client">
+                <li class="nav-item">
+                  <%= link_to 'Client', new_user_session_path, class: "nav-link" %>
+                </li>
+              </button>
+            <% end %>
+
+            <%if user_signed_in? == false && admin_signed_in? == false%>
+              <button type="button" class="btn btn-primary">
+                <li class="nav-item">
+                  <%= link_to 'Admin', new_admin_session_path, class: "nav-link"%>
+                </li>
+              </button>
+            <% end %>
+            
+          <%if admin_signed_in? || user_signed_in? %>
+            <div class="dropdown">
+              <div class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+                
+              </div>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                <%if admin_signed_in? %>
+                  <a class="dropdown-item" href="#"><%= current_admin.email %></a>
+                  <%= link_to 'Sign out', destroy_admin_session_path, method: :delete, class: "dropdown-item" %>
+                <% else %>
+                  <a class="dropdown-item"><%= current_user.email %></a>
+                  <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                <% end %>
+              </div>
+            </div>
+          <% end %>
+          </div>
+
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+    <div class="container content-container">
+      <%= render 'layouts/messages' %>
+
+      <%= yield %>
+    </div>
   </body>
 </html>
