--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+.welcome-page {
+  // height: calc(100vh - 6rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .welcome-container {
   display: flex;
@@ -88,6 +94,10 @@ a.nav-link.nav-menu:hover {
   border-radius: 10px;
   padding: 0.5rem;
   min-width: 10rem;
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .card-body > p {
