--- a/app/views/admin/edituser.html.erb
+++ b/app/views/admin/edituser.html.erb
@@ -1,16 +1,19 @@
 <h2>Edit</h2>
 
-<%= form_for(@user, url: admin_path(@user.id), method: :patch) do |f| %>
+<div class="show-user-container">
+  <%= form_for(@user, url: admin_path(@user.id), method: :patch) do |f| %>
 
-  <div class="field">
-    <%= f.label :full_name %><br />
-    <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name" %>
-  </div>  
+    <div class="field">
+      <%= f.label :full_name %><br />
+      <%= f.text_field :full_name, autofocus: true, autocomplete: "full_name" %>
+    </div>  
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+    <div class="actions">
+      <%= f.submit "Update", class: 'btn btn-primary' %>
+    </div>
+  <% end %>
 
-
-<%= link_to "Back", :back %>
+  <button type="button" class="btn btn-primary btn-client back-main-btn back-btn-edit-show">
+    <%= link_to "Back", :back, class: "back-btn" %>
+  </button>
+</div>
