--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,11 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="content-header">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <button type="button" class="btn btn-primary btn-client back-main-btn">
+        <%=link_to "Back", :back, class: "back-btn"%>
+    </button>
+</div>
 
+<div class="buy-form">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -35,9 +41,9 @@
     <%= f.submit "Update", class: 'btn btn-primary' %>
   </div>
 <% end %>
+</form>
 
-<h3>Cancel my account</h3>
+<%# <h3>Cancel my account</h3> %>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete,  class: 'btn btn-primary' %>
 
-<%= link_to "Back", :back %>
