--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,42 +29,75 @@
               <%= link_to 'Home', root_path, class: "nav-link nav-menu" %>
             </li>
 
+            <li class="nav-item active">
+              <%if admin_signed_in? %>
+                <%= link_to 'Dashboard', admin_path, class: "nav-link nav-menu" %>
+              <% elsif user_signed_in? %>
+                <%= link_to 'Stocks', stock_app_index_path, class: "nav-link nav-menu" %>
+              <% end %>
+            </li>
+
+            <li class="nav-item active">
+              <% if user_signed_in? %>
+                <%=link_to 'Transaction History', transaction_history_stock_app_index_path, class: "nav-link nav-menu" %>
+              <% end %>
+            </li>
+
             <div class="admin-user-btn-container">
-            <%if user_signed_in? == false && admin_signed_in? == false%>
-              <button type="button" class="btn btn-primary btn-client">
-                <li class="nav-item">
-                  <%= link_to 'Client', new_user_session_path, class: "nav-link" %>
-                </li>
-              </button>
-            <% end %>
+                  <%if user_signed_in? == false && admin_signed_in? == false%>
+                    <button type="button" class="btn btn-primary btn-client">
+                      <li class="nav-item">
+                        <%= link_to 'Client', new_user_session_path, class: "nav-link" %>
+                      </li>
+                    </button>
+                  <% end %>
 
-            <%if user_signed_in? == false && admin_signed_in? == false%>
-              <button type="button" class="btn btn-primary">
-                <li class="nav-item">
-                  <%= link_to 'Admin', new_admin_session_path, class: "nav-link"%>
-                </li>
-              </button>
-            <% end %>
-            
-          <%if admin_signed_in? || user_signed_in? %>
-            <div class="dropdown">
-              <div class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
-                
-              </div>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                <%if admin_signed_in? %>
-                  <a class="dropdown-item" href="#"><%= current_admin.email %></a>
-                  <%= link_to 'Sign out', destroy_admin_session_path, method: :delete, class: "dropdown-item" %>
-                <% else %>
-                  <a class="dropdown-item"><%= current_user.email %></a>
-                  <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                  <%if user_signed_in? == false && admin_signed_in? == false%>
+                    <button type="button" class="btn btn-primary">
+                      <li class="nav-item">
+                        <%= link_to 'Admin', new_admin_session_path, class: "nav-link"%>
+                      </li>
+                    </button>
+                  <% end %>
+                  
+                <%if admin_signed_in? || user_signed_in? %>
+                  <div class="dropdown">
+                    <div class="btn btn-secondary dropdown-toggle btn-profile" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+                      
+                    </div>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                      <%if admin_signed_in? %>
+                        <a class="dropdown-item"><%= current_admin.email %></a>
+                        <%= link_to 'Sign out', destroy_admin_session_path, method: :delete, class: "dropdown-item" %>
+                      <% else %>
+                        <a class="dropdown-item"><%= current_user.email %></a>
+                        <%= link_to 'Profile', profile_stock_app_index_path, class: "dropdown-item"%> 
+                        <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                      <% end %>
+                    </div>
+                  </div>
                 <% end %>
-              </div>
+
+                <div class="mobile-view-profile">
+                  <%if admin_signed_in? || user_signed_in? %><hr style="margin: 0; border-top: 1px solid #acacac;"/><% end %>
+                  <li class="nav-item active">
+                    <%if admin_signed_in? %> <span class="nav-link nav-menu"><%= current_admin.email %></span> <%end%>
+                  </li>
+                  <li class="nav-item active">
+                    <%if admin_signed_in? %> <%= link_to 'Sign out', destroy_admin_session_path, method: :delete, class: "nav-link nav-menu" %> <%end%>
+                  </li>
+                  <li class="nav-item active">
+                    <%if user_signed_in? %> <span class="nav-link nav-menu"><%= current_user.email %></span> <%end%>
+                  </li>
+                  <li class="nav-item active">
+                    <%if user_signed_in? %> <%= link_to 'Profile', profile_stock_app_index_path, class: "nav-link nav-menu"%> <%end%>
+                  </li>
+                  <li class="nav-item active">
+                    <%if user_signed_in? %> <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "nav-link nav-menu" %> <%end%>
+                  </li>
+                </div>
+
             </div>
-          <% end %>
-          </div>
-
-
           </ul>
         </div>
       </div>
