adds profile and portfolio, fixes shared links in homepage

--- a/app/views/stock_app/transaction_history.html.erb
+++ b/app/views/stock_app/transaction_history.html.erb
@@ -1,20 +1,22 @@
 <div class="content-header">
-    <h1>Transaction History</h1>
-    <button type="button" class="btn btn-primary btn-client back-main-btn">
-        <%=link_to "Back to Stock", stock_app_index_path, class: "back-btn"%>
-    </button>
+<h1>Transaction History</h1>  
+    <div>
+     <button type="button" class="btn btn-primary btn-client back-main-btn">
+        <%= link_to "Back", stock_app_index_path, class: "back-btn" %>
+     </button>
+    </div>
 </div>
-<%@stocks.each do |stock| %>
+<% @stocks.each do |stock| %>
 <div class="col-md-3 pb-4">
     <div class="card item-card card-block">
     <div class="card-body">
-        <h4 class="card-main-amount mb-3"><%=stock.name%> • <%=stock.ticker%></h4>
-        <h5 class="card-title item-card-title mt-1 mb-1">Transaction:<%=stock.transaction_type%></h5>
-        <h5 class="card-title item-card-title mt-1 mb-1">Price: <%=stock.last_price%></h5>
-        <h5 class="card-title item-card-title mt-1 mb-1">Quantity: <%=stock.quantity%></h5>
-        <h6 class="card-text">Date: <%=stock.created_at.time.strftime("%m/%d/%Y")%><br></h6>
+        <h4 class="card-main-amount mb-3"><%= stock.name %> • <%= stock.ticker %></h4>
+        <h5 class="card-title item-card-title mt-1 mb-1">Transaction type: <%= stock.transaction_type %></h5>
+        <h5 class="card-title item-card-title mt-1 mb-1">Price: <%= stock.last_price %></h5>
+        <h5 class="card-title item-card-title mt-1 mb-1">Quantity: <%= stock.quantity %></h5>
+        <h6 class="card-text">Date: <%= stock.created_at.time.strftime("%m/%d/%Y") %><br></h6>
     </div>
     </div>
 </div>
-<%end%>
+<% end %>
 
