--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -125,7 +125,7 @@ a.btn.btn-primary.btn-client.new-user-btn {
 }
 
 .admin-dashboard-btn {
-    width: 100%;
+    width: auto;
     font-size: 0.8rem;
 }
 
