--- a/app/assets/stylesheets/stock_app.scss
+++ b/app/assets/stylesheets/stock_app.scss
@@ -46,14 +46,14 @@ td, td > button > a {
 
 .content-header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;    
+    align-items: left;
     margin-bottom: 3rem;
     text-shadow: 2px 2px 8px #000;
 }
 
 .back-btn {
-    color: #fff;
+    color: #000;
 }
 
 button.btn.btn-primary.btn-client.back-main-btn {
