--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,6 +1,7 @@
 
     <div class="content-header">
-        <h1>Dashboard</h1>
+        <div><h1>Dashboard</h1></div>
+        <div><%=link_to "Create New Account", admin_newuser_path, class: "btn btn-primary btn-client admin-dashboard-btn"%></div>        
     </div>
 
 
