--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,17 @@
               <% end %>
             </li>
 
+              <li class="nav-item active">
+              <% if user_signed_in? %>
+                <%=link_to 'Portfolio', portfolio_stock_app_index_path, class: "nav-link nav-menu" %>
+              <% end %>
+            </li>
+
             <li class="nav-item active">
               <% if user_signed_in? %>
                 <%=link_to 'Transaction History', transaction_history_stock_app_index_path, class: "nav-link nav-menu" %>
               <% end %>
-            </li>
+            </li>            
 
             <div class="admin-user-btn-container">
                   <%if user_signed_in? == false && admin_signed_in? == false%>
@@ -62,8 +68,7 @@
                   
                 <%if admin_signed_in? || user_signed_in? %>
                   <div class="dropdown">
-                    <div class="btn btn-secondary dropdown-toggle btn-profile" type="button" id="dropdownMenuButton" data-toggle="dropdown">
-                      
+                    <div class="btn btn-secondary dropdown-toggle btn-profile" type="button" id="dropdownMenuButton" data-toggle="dropdown">                      
                     </div>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                       <%if admin_signed_in? %>
