--- a/app/views/stock_app/profile.html.erb
+++ b/app/views/stock_app/profile.html.erb
@@ -1,26 +1,21 @@
 <div class="content-header">
-    <h1>Profile</h1>
-    <button type="button" class="btn btn-primary btn-client back-main-btn">
-        <%=link_to "Back to Stock", stock_app_index_path, class: "back-btn"%>
-    </button>
-</div>
+<h1>Profile</h1>  
+   <div>
+     <button type="button" class="btn btn-primary btn-client back-main-btn">
+       <%= link_to "Back", stock_app_index_path, class: "back-btn" %>
+     </button>    
+  </div>
+</div>   
 <div class="balance-container">
     Balance: 
-    <h3 class="balance-amount">
-        $<%=current_user.balance%>
+    <h3 class="balance-amount">       
+        $<%= current_user.balance %>        
     </h3>
 </div>  
 <div class="edit-cash-btn-container">
-    <%= link_to "Edit Profile", edit_user_registration_path, class: 'btn btn-primary btn-client back-main-btn' %>
-    <%= link_to "Cash In", cash_in_stock_app_index_path, class: 'btn btn-primary btn-client back-main-btn' %><br>
+    <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary btn-client back-main-btn" %>
+    <%= link_to "Cash In", cash_in_stock_app_index_path, class: "btn btn-primary btn-client back-main-btn" %><br>
 </div>
-<% current_user.stocks.distinct.pluck(:name, :ticker).each do |stock| %>
-<% if current_user.stocks.where(name: stock[0]).last.total_owned > 0 %>
-<div>
-Stock Name:<%= stock[0] %> 
-Quantity Owned: <%= current_user.stocks.find_by(name: stock[0]).total_owned %>
-Total Current Value: <%= current_user.stocks.find_by(name: stock[0]).total_owned * Market.new_lookup(stock[1]) %>
-<%= link_to "Sell", sell_path(current_user.id, stock[0], stock[1], Market.new_lookup(stock[1])), method: :get %>
-</div>
-<% end %>
-<% end %>
+
+<h3><%= current_user.full_name %></h3>
+<h3><%= current_user.email %></h3>
