--- a/app/views/stock_app/sell.html.erb
+++ b/app/views/stock_app/sell.html.erb
@@ -1,4 +1,4 @@
-<h1>sell stock</h1> 
+<h1>Sell Stock</h1> 
 <%=current_user.balance%><br>
 Stock Name: <%=@stock_name%><br>
 Stock Price: <%=@stock_price%><br>
