--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -95,7 +95,8 @@ a.nav-link.nav-menu:hover {
   border-radius: 10px;
   padding: 0.5rem;
   min-width: 10rem;
-  height: 8rem;
+  height: auto;
+  min-height: 10rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
