--- a/app/views/stock_app/profile.html.erb
+++ b/app/views/stock_app/profile.html.erb
@@ -17,5 +17,7 @@
     <%= link_to "Cash In", cash_in_stock_app_index_path, class: "btn btn-primary btn-client back-main-btn" %><br>
 </div>
 
-<h3><%= current_user.full_name %></h3>
-<h3><%= current_user.email %></h3>
+<div class="buy-form">
+Name  <h3 class="stock-value"><%= current_user.full_name %></h3>
+Email  <h3 class="stock-value"><%= current_user.email %></h3>
+</div>
